# BeltWinder-Matter

./: .gitignore  CMakeLists.txt  HTTPClient.h.angepasst  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32doit-devkit-v1
.github/workflows/: release.yml
lib/: README:Zone.Identifier
lib/esp32_ble_simple/: esp32_ble_simple.cpp  esp32_ble_simple.h
main/: CMakeLists.txt  Kconfig.projbuild  config.h  device_naming.cpp  device_naming.h  idf_component.yml  main.cpp  matter_cluster_defs.h  rollershutter.cpp  rollershutter.h  rollershutter_driver.cpp  rollershutter_driver.h  shelly_ble_manager.cpp  shelly_ble_manager.h  web_ui.html  web_ui_handler.cpp  web_ui_handler.h  wifi_manager.cpp  wifi_manager.h
main/zap/: rollershutter_config_cluster.xml
scripts/: README_BUILD.md  build_hook.py  compress_ui.py  extract_ota_password.py
